--- a/Budget_year.html
+++ b/Budget_year.html
@@ -21,7 +21,7 @@
     var b3 = 0.36;
     var b4 = 0.27;
     var b5 = 0.15;
-    var b6 = 0.06;
+    var b6 = 1; //0.06;
 
     //==== 计算天数
     var date = new Date();           //当前日期
