--- a/TXNmap.html
+++ b/TXNmap.html
@@ -91,6 +91,10 @@
     );
     map_MarkerTrans.addLayer(marker_cluster_Trans);
 
+var marker_2023021417982 = L.marker([35.15645439274168, 136.9661583659583],{}).addTo(marker_cluster_Trans);
+var popup_2023021417982 = L.popup({"maxWidth": 500});
+var html_2023021417982 = $(`<div id="html_2023021417982" style="width: 100.0%; height: 100.0%;">🛒生活费 (食堂): JP¥ 627 [23.2.14]</div>`)[0];popup_2023021417982.setContent(html_2023021417982);marker_2023021417982.bindPopup(popup_2023021417982);
+
 var marker_2023021317488 = L.marker([35.15458405331936, 136.9614637486779],{}).addTo(marker_cluster_Trans);
 var popup_2023021317488 = L.popup({"maxWidth": 500});
 var html_2023021317488 = $(`<div id="html_2023021317488" style="width: 100.0%; height: 100.0%;">🛒生活费 (咖啡): JP¥ 110 [23.2.13]</div>`)[0];popup_2023021317488.setContent(html_2023021317488);marker_2023021317488.bindPopup(popup_2023021317488);
