--- a/TXNmap.html
+++ b/TXNmap.html
@@ -91,9 +91,13 @@
     );
     map_MarkerTrans.addLayer(marker_cluster_Trans);
 
+var marker_2023021813934 = L.marker([35.15357055704589, 136.9505168964499],{}).addTo(marker_cluster_Trans);
+var popup_2023021813934 = L.popup({"maxWidth": 500});
+var html_2023021813934 = $(`<div id="html_2023021813934" style="width: 100.0%; height: 100.0%;">🛒生活费 (超市): JP¥ 3718 [23.2.18]</div>`)[0];popup_2023021813934.setContent(html_2023021813934);marker_2023021813934.bindPopup(popup_2023021813934);
+
 var marker_2023021718376 = L.marker([35.11763689721969,137.0227735838954],{}).addTo(marker_cluster_Trans);
 var popup_2023021718376 = L.popup({"maxWidth": 500});
-var html_2023021718376 = $(`<div id="html_2023021718376" style="width: 100.0%; height: 100.0%;">🍻社交费 (天妇罗面 阿凡达电影): JP¥ 3036 [23.2.17]</div>`)[0];popup_2023021718376.setContent(html_2023021718376);marker_2023021718376.bindPopup(popup_2023021718376);
+var html_2023021718376 = $(`<div id="html_2023021718376" style="width: 100.0%; height: 100.0%;">🍻社交费 (天妇罗面): JP¥ 3036 [23.2.17]</div>`)[0];popup_2023021718376.setContent(html_2023021718376);marker_2023021718376.bindPopup(popup_2023021718376);
 
 var marker_2023021613411 = L.marker([35.1536289452978, 136.9628487285942],{}).addTo(marker_cluster_Trans);
 var popup_2023021613411 = L.popup({"maxWidth": 500});
