--- a/Jupyter/test.html
+++ b/Jupyter/test.html
@@ -32,7 +32,7 @@ body { margin: 0; padding: 0; }
             type: 'geojson',
             // Point to GeoJSON data. This example visualizes all M1.0+ earthquakes
             // from 12/22/15 to 1/21/16 as logged by USGS' Earthquake hazards program.
-            data: 'Mybills.geojson',
+            data: 'https://taroyaki.github.io/xycost/Jupyter/Mybills.geojson',
             cluster: true,
             clusterMaxZoom: 14, // Max zoom to cluster points on
             clusterRadius: 50 // Radius of each cluster when clustering points (defaults to 50)
