--- a/TXNmap.html
+++ b/TXNmap.html
@@ -20,8 +20,8 @@ body { margin: 0; padding: 0; }
         container: 'map',
         // Choose from Mapbox's core styles, or make your own style with Mapbox Studio
         style: 'mapbox://styles/taroyaki/cle811bac000101lesbb028k6',
-        center: [136.958184,35.152029],
-        zoom: 3
+        center: [32.227205892560484, 136.82861344896278],
+        zoom: 6
     });
 
     map.on('load', () => {
