--- a/TXNmap.html
+++ b/TXNmap.html
@@ -20,7 +20,7 @@ body { margin: 0; padding: 0; }
         container: 'map',
         // Choose from Mapbox's core styles, or make your own style with Mapbox Studio
         style: 'mapbox://styles/taroyaki/cle811bac000101lesbb028k6',
-        center: [136.82681095995162,32.228776021355486],
+        center: [136.09487483322798,34.03302552092813],//34.03302552092813, 136.09487483322798
         zoom: 6
     });
 
