--- a/TXNmap.html
+++ b/TXNmap.html
@@ -20,7 +20,7 @@ body { margin: 0; padding: 0; }
         container: 'map',
         // Choose from Mapbox's core styles, or make your own style with Mapbox Studio
         style: 'mapbox://styles/taroyaki/cle811bac000101lesbb028k6',
-        center: [136.1880745109786,34.973832945662664],//34.973832945662664, 136.1880745109786
+        center: [136.1880745109786,34.973832945662664],
         zoom: 6
     });
 
