--- a/TXNmap.html
+++ b/TXNmap.html
@@ -20,7 +20,7 @@ body { margin: 0; padding: 0; }
         container: 'map',
         // Choose from Mapbox's core styles, or make your own style with Mapbox Studio
         style: 'mapbox://styles/taroyaki/cle811bac000101lesbb028k6',
-        center: [136.188074510978,34.97383294566266],
+        center: [136.0408806210415,34.88089928464447],//34.88089928464447, 136.0408806210415
         zoom: 6
     });
 
