--- a/TXNmap.html
+++ b/TXNmap.html
@@ -20,7 +20,7 @@ body { margin: 0; padding: 0; }
         container: 'map',
         // Choose from Mapbox's core styles, or make your own style with Mapbox Studio
         style: 'mapbox://styles/taroyaki/cle811bac000101lesbb028k6',
-        center: [136.0408806210415,34.88089928464447],//34.88089928464447, 136.0408806210415
+        center: [136.043128711589,34.72913305715461],//34.72913305715461, 136.043128711589
         zoom: 6
     });
 
@@ -52,7 +52,7 @@ body { margin: 0; padding: 0; }
                 'circle-color': [
                     'step',
                     ['get', 'point_count'],
-                    '#51bbd6',
+                    '#ffd966',
                     100,
                     '#f1f075',
                     750,
