--- a/TXNmap.html
+++ b/TXNmap.html
@@ -1,152 +1,161 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="utf-8">
-<title>Create and style clusters</title>
-<meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
-<link href="https://api.mapbox.com/mapbox-gl-js/v2.12.0/mapbox-gl.css" rel="stylesheet">
-<script src="https://api.mapbox.com/mapbox-gl-js/v2.12.0/mapbox-gl.js"></script>
-<style>
-body { margin: 0; padding: 0; }
-#map { position: absolute; top: 0; bottom: 0; width: 100%; }
-</style>
+    <meta charset="utf-8">
+    <title>Create and style clusters</title>
+    <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
+    <link href="https://api.mapbox.com/mapbox-gl-js/v2.12.0/mapbox-gl.css" rel="stylesheet">
+    <script src="https://api.mapbox.com/mapbox-gl-js/v2.12.0/mapbox-gl.js"></script>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+        }
+
+        #map {
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
 </head>
+
 <body>
-<div id="map"></div>
+    <div id="map"></div>
 
-<script>
-	mapboxgl.accessToken = 'pk.eyJ1IjoidGFyb3lha2kiLCJhIjoiY2xlODB4cmE5MGF6ZzN1cTUyaWM5dGdiZiJ9.SJVigDgSlo3sluAYHtaeRQ';
-    const map = new mapboxgl.Map({
-        container: 'map',
-        // Choose from Mapbox's core styles, or make your own style with Mapbox Studio
-        style: 'mapbox://styles/taroyaki/cle811bac000101lesbb028k6',
-        center: [136.1,34.0],//34.72913305715461, 136.043128711589
-        zoom: 6
-    });
-
-    map.on('load', () => {
-        // Add a new source from our GeoJSON data and
-        // set the 'cluster' option to true. GL-JS will
-        // add the point_count property to your source data.
-        map.addSource('earthquakes', {
-            type: 'geojson',
-            // Point to GeoJSON data. This example visualizes all M1.0+ earthquakes
-            // from 12/22/15 to 1/21/16 as logged by USGS' Earthquake hazards program.
-            data: 'https://taroyaki.github.io/xycost/Data/Mybills.geojson',
-            cluster: true,
-            clusterMaxZoom: 14, // Max zoom to cluster points on
-            clusterRadius: 50 // Radius of each cluster when clustering points (defaults to 50)
+    <script>
+        mapboxgl.accessToken = 'pk.eyJ1IjoidGFyb3lha2kiLCJhIjoiY2xlODB4cmE5MGF6ZzN1cTUyaWM5dGdiZiJ9.SJVigDgSlo3sluAYHtaeRQ';
+        const map = new mapboxgl.Map({
+            container: 'map',
+            // Choose from Mapbox's core styles, or make your own style with Mapbox Studio
+            style: 'mapbox://styles/taroyaki/cle811bac000101lesbb028k6',
+            center: [136.1, 34.0],//34.72913305715461, 136.043128711589
+            zoom: 6
         });
 
-        map.addLayer({
-            id: 'clusters',
-            type: 'circle',
-            source: 'earthquakes',
-            filter: ['has', 'point_count'],
-            paint: {
-                // Use step expressions (https://docs.mapbox.com/mapbox-gl-js/style-spec/#expressions-step)
-                // with three steps to implement three types of circles:
-                //   * Blue, 20px circles when point count is less than 100
-                //   * Yellow, 30px circles when point count is between 100 and 750
-                //   * Pink, 40px circles when point count is greater than or equal to 750
-                'circle-color': [
-                    'step',
-                    ['get', 'point_count'],
-                    '#ffd966',
-                    100,
-                    '#f1f075',
-                    750,
-                    '#f28cb1'
-                ],
-                'circle-radius': [
-                    'step',
-                    ['get', 'point_count'],
-                    20,
-                    100,
-                    30,
-                    750,
-                    40
-                ]
-            }
-        });
-
-        map.addLayer({
-            id: 'cluster-count',
-            type: 'symbol',
-            source: 'earthquakes',
-            filter: ['has', 'point_count'],
-            layout: {
-                'text-field': ['get', 'point_count_abbreviated'],
-                'text-font': ['DIN Offc Pro Medium', 'Arial Unicode MS Bold'],
-                'text-size': 12
-            }
-        });
-
-        map.addLayer({
-            id: 'unclustered-point',
-            type: 'circle',
-            source: 'earthquakes',
-            filter: ['!', ['has', 'point_count']],
-            paint: {
-                'circle-color': '#11b4da',
-                'circle-radius': 4,
-                'circle-stroke-width': 1,
-                'circle-stroke-color': '#fff'
-            }
-        });
-
-        // inspect a cluster on click
-        map.on('click', 'clusters', (e) => {
-            const features = map.queryRenderedFeatures(e.point, {
-                layers: ['clusters']
+        map.on('load', () => {
+            // Add a new source from our GeoJSON data and
+            // set the 'cluster' option to true. GL-JS will
+            // add the point_count property to your source data.
+            map.addSource('earthquakes', {
+                type: 'geojson',
+                // Point to GeoJSON data. This example visualizes all M1.0+ earthquakes
+                // from 12/22/15 to 1/21/16 as logged by USGS' Earthquake hazards program.
+                data: 'https://taroyaki.github.io/xycost/Data/Mybills.geojson',
             });
-            const clusterId = features[0].properties.cluster_id;
-            map.getSource('earthquakes').getClusterExpansionZoom(
-                clusterId,
-                (err, zoom) => {
-                    if (err) return;
-
-                    map.easeTo({
-                        center: features[0].geometry.coordinates,
-                        zoom: zoom
-                    });
-                }
+            map.addLayer(
+                {
+                    id: 'earthquakes1',
+                    type: 'heatmap',
+                    source: 'earthquakes',
+                    maxzoom: 15,
+                    paint: {
+                        // increase weight as diameter breast height increases
+                        'heatmap-weight': {
+                            property: 'month',
+                            type: 'exponential',
+                            stops: [
+                                [1, 0],
+                                [62, 1]
+                            ]
+                        },
+                        // increase intensity as zoom level increases
+                        'heatmap-intensity': {
+                            stops: [
+                                [11, 1],
+                                [15, 3]
+                            ]
+                        },
+                        // assign color values be applied to points depending on their density
+                        'heatmap-color': [
+                            'interpolate',
+                            ['linear'],
+                            ['heatmap-density'],
+                            0,
+                            'rgba(44,130,230,0)',
+                            0.2,
+                            'rgb(255,255,255)',
+                            0.4,
+                            'rgb(122,174,235)',
+                            0.6,
+                            'rgb(44,130,230)',
+                            0.8,
+                            'rgb(44,130,230)',
+                            1,
+                            'rgb(44,130,230)'
+                        ],
+                        // increase radius as zoom increases
+                        'heatmap-radius': {
+                            stops: [
+                                [11, 15],
+                                [15, 20]
+                            ]
+                        },
+                        // decrease opacity to transition into the circle layer
+                        'heatmap-opacity': {
+                            default: 1,
+                            stops: [
+                                [14, 1],
+                                [15, 0]
+                            ]
+                        }
+                    }
+                },
+                'waterway-label'
             );
-        });
 
-        // When a click event occurs on a feature in
-        // the unclustered-point layer, open a popup at
-        // the location of the feature, with
-        // description HTML from its properties.
-        map.on('click', 'unclustered-point', (e) => {
-            const coordinates = e.features[0].geometry.coordinates.slice();
-          //  const mag = e.features[0].properties.mag;
-         //   const tsunami =
-         //       e.features[0].properties.tsunami === 1 ? 'yes' : 'no';
 
-            // Ensure that if the map is zoomed out such that
-            // multiple copies of the feature are visible, the
-            // popup appears over the copy being pointed to.
-            while (Math.abs(e.lngLat.lng - coordinates[0]) > 180) {
-                coordinates[0] += e.lngLat.lng > coordinates[0] ? 360 : -360;
-            }
+            map.addLayer(
+                {
+                    id: 'earthquakes2',
+                    type: 'circle',
+                    source: 'earthquakes',
+                    minzoom: 14,
+                    paint: {
+                        // increase the radius of the circle as the zoom level and dbh value increases
+                        'circle-radius': {
+                            property: 'month',
+                            type: 'exponential',
+                            stops: [
+                                [{ zoom: 15, value: 1 }, 5],
+                                [{ zoom: 15, value: 62 }, 10],
+                                [{ zoom: 22, value: 1 }, 20],
+                                [{ zoom: 22, value: 62 }, 50]
+                            ]
+                        },
+                        'circle-color': {
+                            property: 'month',
+                            type: 'exponential',
+                            stops: [
+                                [0, 'rgba(236,222,239,0)'],
+                                [10, 'rgb(236,222,239)'],
+                                [20, 'rgb(208,209,230)'],
+                                [30, 'rgb(166,189,219)'],
+                                [40, 'rgb(103,169,207)'],
+                                [50, 'rgb(28,144,153)'],
+                                [60, 'rgb(1,108,89)']
+                            ]
+                        },
+                        'circle-stroke-color': 'white',
+                        'circle-stroke-width': 1,
+                        'circle-opacity': {
+                            stops: [
+                                [14, 0],
+                                [15, 1]
+                            ]
+                        }
+                    }
+                },
+                'waterway-label'
+            );
 
-           // new mapboxgl.Popup()
-           //     .setLngLat(coordinates)
-           //     .setHTML(
-           //         `magnitude: ${mag}<br>Was there a tsunami?: ${tsunami}`
-           //     )
-           //     .addTo(map);
-        });
 
-        map.on('mouseenter', 'clusters', () => {
-            map.getCanvas().style.cursor = 'pointer';
+
         });
-        map.on('mouseleave', 'clusters', () => {
-            map.getCanvas().style.cursor = '';
-        });
-    });
-</script>
+    </script>
 
 </body>
+
 </html>
