--- a/TXNmap.html
+++ b/TXNmap.html
@@ -30,7 +30,7 @@
         const map = new mapboxgl.Map({
             container: 'map',
             // Choose from Mapbox's core styles, or make your own style with Mapbox Studio
-            style: 'mapbox://styles/taroyaki/cle811bac000101lesbb028k6',
+            style: 'mapbox://styles/taroyaki/clg77d3bn000301n2karpmnob',//'mapbox://styles/taroyaki/cle811bac000101lesbb028k6',
             center: [136.1, 34.0],//34.72913305715461, 136.043128711589
             zoom: 6
         });
