--- a/TXNmap.html
+++ b/TXNmap.html
@@ -145,7 +145,7 @@
                     .setHTML(`<strong>Date:</strong> ${event.features[0].properties.year}.${event.features[0].properties.month}.${event.features[0].properties.day}`)
                     .addTo(map);
             });
-            
+
             // Add geolocate control to the map.
             map.addControl(
                 new mapboxgl.GeolocateControl({
@@ -155,7 +155,7 @@
                     // When active the map will receive updates to the device's location as it changes.
                     trackUserLocation: true,
                     // Draw an arrow next to the location dot to indicate which direction the device is heading.
-                    showUserHeading: true
+                    showUserHeading: false
                 })
             );
 
