--- a/TXNmap.html
+++ b/TXNmap.html
@@ -31,7 +31,7 @@
             container: 'map',
             // Choose from Mapbox's core styles, or make your own style with Mapbox Studio
             style: 'mapbox://styles/taroyaki/clg77d3bn000301n2karpmnob',//'mapbox://styles/taroyaki/cle811bac000101lesbb028k6',
-            center: [136.9350162968127,35.15923056477956],//,, , , 
+            center: [136.95062288789512,35.138555058923096],//,, , , ,
             zoom: 10.5
         });
 
